testfx/errors/error_tests/edge_31_unless_until.fx
// Ruby风格关键字
x := 10

unless (x > 5) {
    println("x is not greater than 5")
}

until (x == 0) {
    x = x - 1
    println(x)
}
